Ensure focus rings are not clipped in player controls
REDMINE-20970

--- a/entry_types/scrolled/package/src/frontend/PlayerControls/ControlBar.module.css
+++ b/entry_types/scrolled/package/src/frontend/PlayerControls/ControlBar.module.css
@@ -71,6 +71,7 @@
   justify-content: center;
   color: currentColor;
   cursor: pointer;
+  outline-offset: -5px;
 }
 
 .button svg {
